# neologisms

./: .gitignore  README.md  build_pref_data.py  csv_dataset.py  dataset.py  dict_dataset.py  dpo_dataset.py  pref_dataset.py  pyproject.toml  requirements.txt  template.py  train.ipynb  train.py  use_neo.py  vast.ipynb
data/: .gitignore  data_utils.ipynb  lima_train_subset.csv
experiments/lengths/: dataset.py  synth_data.py  train.py  visualize.py
experiments/lengths/data/: lima_train_subset_lengths.csv
experiments/obscure_sorrows/: dict_dataset.py  train.py  use_word.py
neologisms/: __init__.py  dataset.py  dpo_dataset.py  generation.py  lm.py  train.py  use_neo.py  utils.py
prompts/: eval_prompt.txt  llama_instruct_ask.txt  llama_instruct_define.txt  llama_instruct_prompt.txt  llama_instruct_synonym.txt  llama_instruct_train_minimal.txt  llama_instruct_train_prompt.txt
utils/: __init__.py  pref_data_scripts.ipynb  read_pt.sh  vis_embed.py
